Changes committed on 11.07.2024

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
     "react-github-btn": "1.4.0",
@@ -39,6 +40,7 @@
     "react-table": "7.8.0",
     "react-to-print": "^2.15.1",
     "reactstrap": "^9.2.2",
+    "recharts": "^2.12.7",
     "stylis": "4.1.4",
     "stylis-plugin-rtl": "2.1.1",
     "xlsx": "^0.18.5",
