--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
     "file-saver": "^2.0.5",
+    "pdfjs-dist": "^4.4.168",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-chartjs-2": "5.2.0",
@@ -33,6 +34,7 @@
     "react-feather": "^2.0.10",
     "react-github-btn": "1.4.0",
     "react-modal": "^3.16.1",
+    "react-pdf": "^9.1.0",
     "react-router-dom": "6.11.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
