--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chart.js": "4.3.0",
     "chroma-js": "2.4.2",
     "file-saver": "^2.0.5",
+    "flatpickr": "^4.6.13",
     "pdfjs-dist": "^4.4.168",
     "prop-types": "15.8.1",
     "react": "18.2.0",
@@ -32,6 +33,7 @@
     "react-datepicker": "^7.3.0",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
+    "react-flatpickr": "^3.10.13",
     "react-github-btn": "1.4.0",
     "react-modal": "^3.16.1",
     "react-pdf": "^9.1.0",
