--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "pdfjs-dist": "^4.4.168",
     "prop-types": "15.8.1",
     "react": "18.2.0",
+    "react-bootstrap": "^2.10.4",
+    "react-bootstrap-accordion": "^1.0.0",
     "react-chartjs-2": "5.2.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "18.2.0",
